--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
+            background-image: url('background.jpg'); /* Adicionando o background.jpg */
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: #fff;
         }
         header {
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 30px;
-            background-image: url('fundo.jpg'); /* Imagem de fundo */
+            background-image: url('fundo.jpg'); /* Imagem de fundo do header */
             background-size: cover;
             background-position: center;
             color: #fff;
@@ -65,7 +69,7 @@
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo branco com leve transparência */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
