--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
-            color: #fff;
+            color: #000; /* Cor de texto para preto (exceto título) */
         }
         header {
             display: flex;
