--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
         header h1 {
             margin: 20px 0 10px;
-            font-size: 30px;  /* Diminuí o tamanho da fonte do título */
+            font-size: 25px;  /* Tamanho do título ajustado para 25px */
             color: #FF0055;
             font-weight: bold;
             text-align: center; /* Centraliza o título */
@@ -128,6 +128,7 @@
             font-size: 18px;
             color: #28a745;
             margin-bottom: 20px;
+            font-weight: bold; /* Negrito para o valor */
         }
         .colors {
             margin-bottom: 20px;
