--- a/index.html
+++ b/index.html
@@ -34,28 +34,27 @@
             padding-left: 20px;
             border-radius: 10px;
             padding: 20px;
+            max-width: 500px; /* Limitar o tamanho para que o texto não ocupe espaço demais */
         }
         .thumb-container {
-            height: 200px; /* Aumentando o tamanho da imagem */
-            width: 200px; /* Aumentando o tamanho da imagem */
+            height: 150px; /* Diminuindo o tamanho da imagem */
+            width: 150px; /* Diminuindo o tamanho da imagem */
             display: flex;
             justify-content: center;
             align-items: center;
-            /* Remover fundo preto e borda */
             background-color: transparent; /* Remover o fundo preto */
-            /* Remover bordas e arredondamento */
             border: none;
-            margin-right: 20px; /* Manter margem direita para separar do texto */
+            margin-right: 20px;
         }
         header img {
-            width: 100%;  /* Aumentando o tamanho da imagem para ocupar 100% da div */
+            width: 100%;  
             height: auto;
             object-fit: cover;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Adicionando sombra preta */
         }
         header h1 {
             margin: 20px 0 10px;
-            font-size: 24px;  /* Diminuí o tamanho da fonte do título */
+            font-size: 22px;  /* Reduzindo o tamanho da fonte do título */
             color: #FF0055;
             font-weight: bold;
             text-align: center; /* Centraliza o título */
@@ -63,6 +62,7 @@
         }
         header p {
             margin: 5px 0 0;
+            font-size: 14px; /* Diminuindo o tamanho da fonte do texto */
             color: #fff;
             text-shadow: 1px 1px 5px #000;
         }
