--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             height: 250px; /* Ajustando a altura do banner */
             width: 100%;
             border-radius: 0 0 10px 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Sombra aplicada */
         }
 
         .message {
