--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
                 <img id="main-image-2" src="tubinho_vermelho.jpg" alt="Garrafa Vermelha" onclick="zoomImage(this)">
             </div>
             <div class="product-details">
-                <h2 class="product-title">Garrafinha DFE 500 ML</h2>
-                <p class="product-price">R$ 10,50</p>
+                <h2 class="product-title">Garrafa DFE 500 ML</h2>
+                <p class="product-price">R$ 10,90</p>
                 <div class="colors">
                     <p>Cor:</p>
                     <button onclick="changeImageSecondProduct('tubinho_vermelho.jpg')">Vermelho</button>
@@ -329,8 +329,8 @@
                 <img id="main-image-3" src="galao_azul.jpg" alt="Garrafa Azul 5L" onclick="zoomImage(this)">
             </div>
             <div class="product-details">
-                <h2 class="product-title">Garra DFE 1L</h2>
-                <p class="product-price">R$ 18,00</p>
+                <h2 class="product-title">Galão 1L DFE FIT</h2>
+                <p class="product-price">R$ 18,90</p>
                 <div class="colors">
                     <p>Cor:</p>
                     <button onclick="changeImageThirdProduct('galao_azul.jpg')">Azul</button>
