--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <button onclick="changeImage('large_roxa.jpg')">Roxa</button>
                     <button onclick="changeImage('large_branco_perolado.jpg')">Branco Perolado</button>
                     <button onclick="changeImage('large_preto_fume.jpg')">Preto Fumê</button>
-                    <button onclick="changeImage('large_pink.jpg')">Pink</button>
+                    <button onclick="changeImage('large_rosa.jpg')">Pink</button>
                     <button onclick="changeImage('large_azul_tifanni.jpg')">Azul Tiffany</button>
                 </div>
                 <a href="https://wa.me/5515997265082" target="_blank" class="whatsapp-button">
