--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <button onclick="changeImage('large_roxa.jpg')">Roxa</button>
                     <button onclick="changeImage('large_branco_perolado.jpg')">Branco Perolado</button>
                     <button onclick="changeImage('large_preto_fume.jpg')">Preto Fumê</button>
-                    <button onclick="changeImage('large_rosa.jpg')">Pink</button>
+                    <button onclick="changeImage('large_pink.jpg')">Pink</button>
                     <button onclick="changeImage('large_azul_tifanni.jpg')">Azul Tiffany</button>
                 </div>
                 <a href="https://wa.me/5515997265082" target="_blank" class="whatsapp-button">
@@ -293,7 +293,7 @@
                     <img src="large_branco_perolado.jpg" alt="Coqueteleira Branco Perolado" onclick="changeImage('large_branco_perolado.jpg')">
                     <img src="large_preto_fume.jpg" alt="Coqueteleira Preto Fumê" onclick="changeImage('large_preto_fume.jpg')">
                     <img src="large_azul_tifanni.jpg" alt="Coqueteleira Azul Tiffany" onclick="changeImage('large_azul_tifanni.jpg')">
-                    <img src="large_pink.jpg" alt="Coqueteleira Pink" onclick="changeImage('large_pink.jpg')">
+                    <img src="large_rosa.jpg" alt="Coqueteleira Rosa" onclick="changeImage('large_rosa.jpg')">
                 </div>
             </div>
         </div>
